# test_pa

./: Dockerfile  README.md  config.yaml  main.py  pyproject.toml  render.yaml  web_app.py
core/: ai_advisor.py  dedupe.py  history.py  models.py  reporter.py  sca_scanner.py  scorer.py  secrets_scanner.py  suppressions.py
data/: apsa_history.db
parsers/: js_parser.py  js_scanner.js  php_parser.py  php_scanner.php  py_parser.py
templates/: base.html  error.html  history.html  index.html  results.html
test_sca/: requirements.txt
tests/: test_dedupe.py  test_py_parser.py  test_reporter.py  test_sca_scanner.py  test_scorer.py  test_secrets_scanner.py  test_suppressions.py
tests_samples/: vulne.js  vulne.php  vulne.py
