[tool.poetry]
name = "apsa-sast"
version = "0.1.0"
description = "Outil d'analyse statique de sécurité"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.0.0"
pyyaml = "^6.0.1"
typer = "^0.9.0"
flask = "^3.0.0"
gunicorn = "^21.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"